package designpatternsproject;

public class ShoppingOnline implements ShoppingBehavior{
    @Override
    public void shop() {
        System.out.printf("In COVID-19 pandemic shopping online is safe :)\n");
    }
}
