@startuml

title __DES�GNPATTERNSPROJECT's Class Diagram__\n

  namespace designpatternsproject {
    abstract class designpatternsproject.Customer {
        + Customer()
        + performShopping()
        + setShoppingBehavior()
    }
  }
  

  namespace designpatternsproject {
    class designpatternsproject.ShoppingMain {
        + DesignPatternsProject()
        {static} + main()
    }
  }
  

  namespace designpatternsproject {
    interface designpatternsproject.Observer {
        {abstract} + update()
    }
  }
  

  namespace designpatternsproject {
    class designpatternsproject.PassiveCustomer {
        + PassiveCustomer()
        + update()
    }
  }
  

  namespace designpatternsproject {
    class designpatternsproject.ShopaholicCustomer {
        + ShopaholicCustomer()
        + update()
        - processMessage()
    }
  }
  

  namespace designpatternsproject {
    interface designpatternsproject.ShoppingBehavior {
        {abstract} + shop()
    }
  }
  

  namespace designpatternsproject {
    class designpatternsproject.ShoppingOnline {
        + ShoppingOnline()
        + shop()
    }
  }
  

  namespace designpatternsproject {
    class designpatternsproject.ShoppingPhysical {
        + ShoppingPhysical()
        + shop()
    }
  }
  

  namespace designpatternsproject {
    class designpatternsproject.Store {
        - customers : List<Observer>
        + Store()
        + addSubscriber()
        + notifySubscribers()
        + removeSubscriber()
    }
  }
  

  namespace designpatternsproject {
    interface designpatternsproject.Subject {
        {abstract} + addSubscriber()
        {abstract} + notifySubscribers()
        {abstract} + removeSubscriber()
    }
  }
  

  designpatternsproject.Customer o-- designpatternsproject.ShoppingBehavior : shoppingBehavior
  designpatternsproject.PassiveCustomer .up.|> designpatternsproject.Observer
  designpatternsproject.PassiveCustomer -up-|> designpatternsproject.Customer
  designpatternsproject.ShopaholicCustomer .up.|> designpatternsproject.Observer
  designpatternsproject.ShopaholicCustomer -up-|> designpatternsproject.Customer
  designpatternsproject.ShoppingOnline .up.|> designpatternsproject.ShoppingBehavior
  designpatternsproject.ShoppingPhysical .up.|> designpatternsproject.ShoppingBehavior
  designpatternsproject.Store .up.|> designpatternsproject.Subject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
